--- a/index.html
+++ b/index.html
@@ -673,6 +673,13 @@
                 font-size: 2rem;
             }
         }
+
+        @media (max-width: 400px){
+            .logo h1 {
+                    font-size: 1.5rem;
+                    color: var(--white);
+                }
+        }
     </style>
 </head>
 <body>
